Update to reflect latest book and links to articles.

--- a/_posts/2016-05-12-articles.md
+++ b/_posts/2016-05-12-articles.md
@@ -6,4 +6,6 @@ layout: post
 
 # Related Articles
 
- - [Microservices as an Evolutionary Architecture](https://www.thoughtworks.com/insights/blog/microservices-evolutionary-architecture)
+ - [Microservices as an Evolutionary Architecture](https://www.thoughtworks.com/insights/blog/microservices-evolutionary-architecture) - 11 May, 2016
+ - [Characteristics of Evolutionary Architectures](https://www.infoq.com/news/2016/03/evolutionary-architectures) - 31 Mar, 2016
+ - [Evolutionary architecture and emergent design](https://www.ibm.com/developerworks/library/j-eaed1/index.html) - February 24, 2009
