--- a/_drafts/01.a_call_to_action.md
+++ b/_drafts/01.a_call_to_action.md
@@ -7,5 +7,17 @@ It was the first day of work for Jesse, the new intern at PenultimateWidgets, on
 
 However, when Jesse arrived, dressed for the First Day of Work, the place was in chaos. The receptionist, sporting a "Logan" name tag,  barely looked up before redirecting Jesse to a conference room to fill out paperwork before a further shuffle towards the IT department. "Here is your cubicle--someone will be around shortly to give you the inception." Logan paused. "Sorry it's so crazy today, but the company founder has called an all-hands meeting this morning, and no one knows what it's about. Good luck."
 
+Jesse halfheartedly read company manuals until a bearded guy wearing a Tool t-shirt approached. "Hi, you must be Jesse. I'm Rowan...I guess I'm your boss. Sorry for all the confusion here today. Did Logan fill you in?" 
+
+"Not much," Jesse said.
+
+"OK, well, the company-wide meeting starts in five minutes. We'll all find out at the same time. Let's head to the big conference room." Jesse followed him towards the elevator shafts.
+
+As they approached, most of the company was already there, and the rest were milling around. Shortly, a stern looking woman arrived and made her way to the front of the room.
+
+"Good morning, everyone. Welcome. For the few who don't know me, I'm Penn, the founder and CEO here at PenultimateWidgets. Those of you who have been here for a while have noticed that we've recently hired a bunch of new people, including a few new hires that start today. I'm going to tell you why."
+
+"Most of you know the history of the company , but for the new folks, let me give you the quick rundown. I started this company a dozen years ago. Like most people, I thought at the time that _penultimate_ meant "best" or "peak", and the wordplay with my name
+
 
 
