--- a/_drafts/01.a_call_to_action.md
+++ b/_drafts/01.a_call_to_action.md
@@ -5,19 +5,45 @@ title: In Which a Call to Action is Made
 
 It was the first day of work for Jesse, the new intern at PenultimateWidgets, one of the best employers in town. Jesse had a fresh new computer science degree and was itching to get into the real world. Unfortunately, as good an employer as PenultimateWidgets was, they were known around the Springfield campus a bit blue collar for IT jobs: good job security (the company has been around forever), but not the most exciting work. "Not to worry," Jesse thought. "I can always do open source to scratch the cutting edge itch."
 
-However, when Jesse arrived, dressed for the First Day of Work, the place was in chaos. The receptionist, sporting a "Logan" name tag,  barely looked up before redirecting Jesse to a conference room to fill out paperwork before a further shuffle towards the IT department. "Here is your cubicle--someone will be around shortly to give you the inception." Logan paused. "Sorry it's so crazy today, but the company founder has called an all-hands meeting this morning, and no one knows what it's about. Good luck."
+When Jesse arrived, dressed for the First Day of Work, the place was in chaos. The receptionist, sporting a "Logan" name tag, barely looked up before redirecting Jesse to a conference room to fill out paperwork before a further shuffle towards the IT department. "Here is your cubicle--someone will be around shortly to give you the inception stuff." Logan paused. "Sorry it's so crazy today, but the company founder has called an all-hands meeting this morning, and no one knows what it's about." After a pause, "Good luck."
 
 Jesse halfheartedly read company manuals until a bearded guy wearing a Tool t-shirt approached. "Hi, you must be Jesse. I'm Rowan...I guess I'm your boss. Sorry for all the confusion here today. Did Logan fill you in?" 
 
 "Not much," Jesse said.
 
-"OK, well, the company-wide meeting starts in five minutes. We'll all find out at the same time. Let's head to the big conference room." Jesse followed him towards the elevator shafts.
+"OK, well, the Big Meeting starts in five minutes. We'll all find out at the same time. Let's head to the big auditorium." Jesse followed him towards the elevator shafts.
 
 As they approached, most of the company was already there, and the rest were milling around. Shortly, a stern looking woman arrived and made her way to the front of the room.
 
 "Good morning, everyone. Welcome. For the few who don't know me, I'm Penn, the founder and CEO here at PenultimateWidgets. Those of you who have been here for a while have noticed that we've recently hired a bunch of new people, including a few new hires that start today. I'm going to tell you why."
 
-"Most of you know the history of the company , but for the new folks, let me give you the quick rundown. I started this company a dozen years ago. Like most people, I thought at the time that _penultimate_ meant "best" or "peak", and the wordplay with my name
+"Most of you know the history of the company , but for the new folks, let me give you the quick rundown. I started this company a dozen years ago. Like most people, I thought at the time that _penultimate_ meant "best" or "peak", and the wordplay with my name was irresistible. For those who haven't heard the embarrassing story when our biggest competitor made fun of our name on stage at the big Widget convention and made me realize my error, well, I'll spare you."
+
+"Generally, we have taken the name as a badge of honor, to prove that we were not the next to last Widget company. Unfortunately, that's becoming too close to the truth."
+
+She paused, gathering herself. "I hit the breaking point about two months ago. I was talking to the sale reps, and they were complaining that we can't get new Widget designs done and out the door as fast as our competitors. We have awesome designers, but we've built up so much waste that actually delivering is tough." While most of the crowd has been mouse-quiet up until this point, Jesse heard some murmurs of agreement.
+
+"When I left that meeting, I headed over to chat with the enterprise architects. They are in a different panic. I asked them at the beginning of the year to lay out a strategy plan for technology over the next five years. They gave it their best try, but gave up. We had a long talk about technology choices and the speed of innovation, particularly in the Javascript ecosystem. They convinced me that trying to predict something like what Javascript web framework we'll be using in two years is unknowable--it probably hasn't been started yet! So how is long term planning possible in an environment like this?"
+
+"Then it hit me: these are part of the same problem, just from opposite ends. While the widget business is as old as economics textbook examples, the business world is constantly changing. At the same time, the technology world is changing at an even faster pace. And neither is going to slow down to accommodate us."
+
+"That's when it hit me: more planning isn't the solution. We must get better at _adaptability_. The world is going to keep changing, and the pace of change will keep accelerating, so we'd better build our capabilities to withstand that change if we're going to survive as a company."
+
+That made the room generally shuffle uncomfortably in their seats.
+
+"To that end, I've been talking to our architects about _evolutionary architecture_ and our business folks about _hypothesis-driven development_. We need architecture that can adapt to both the changes in our business and the crazy dynamic nature of the technology world. And adaptable architecture in turn allows us to implement some advanced business capabilities, such as the ability to do A/B testing for new features, to help us hone in on what our users really want."
+
+"Over the next year or so, we're going to look at each of our systems and figure out if we need to replace it, adapt it, or build a new one to replace it. That's what some of the new staff is going to help with."
+
+She paused again. "I know this is going to be complex, and we'll hit some unexpected roadblocks along the way, but I hope you'll help us build this visions. Frankly, it's out best hope to survive in the increasingly tough Widget market."
+
+"Each team lead will work on a portfolio of projects to update; you'll get the list of projects next week. We're trying to still implement some new features during this transition, but most of the major changes will wait until this initiative is done."
+
+She ended with a flourish. "Thanks for your attention and continued support of PenultimateWidgets. With your help, we can transform this company into a 21st Century powerhouse."
+
+The audience provided a smattering of applause that built a bit as people loosen up a bit and realized it was expected. Jesse wondered "What have I gotten myself into? This will either be the coolest job ever or I'll need to start updating my resume. I'll give it a few weeks to see how things shake out.
+
+Coming next: [In Which an Attack Plan is Hatched]({{site.url}}/blog/02.attack_plan.html)
 
 
 
