adding coming soon page

--- a/_drafts/01.a_call_to_action.md
+++ b/_drafts/01.a_call_to_action.md
@@ -43,7 +43,4 @@ She ended with a flourish. "Thanks for your attention and continued support of P
 
 The audience provided a smattering of applause that built a bit as people loosen up a bit and realized it was expected. Jesse wondered "What have I gotten myself into? This will either be the coolest job ever or I'll need to start updating my resume. I'll give it a few weeks to see how things shake out.
 
-Coming next: [In Which an Attack Plan is Hatched]({{site.url}}/blog/02.attack_plan.html)
-
-
-
+Coming next: [In Which an Attack Plan is Hatched]({{site.url}}/coming_soon.html)
